--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ Pillow
 pymongo
 djangorestframework
 fabric
-django-registration
+# got for django1.5 compatibility
+hg+https://bitbucket.org/pedromcaraujo/django-registration@157c007370f712d0fa55c8a74d0c25e58dbb72dc
+
